--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -6,7 +6,7 @@
         }
     ],
     "name": "ecars",
-    "namespace": "",
+    "namespace": "SriGS",
     "sfdcLoginUrl": "https://login.salesforce.com",
     "sourceApiVersion": "56.0"
 }
